[project]
name = "tasks"
version = "0.0.1"
description = "A task manager that's (mostly) file-based"
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
proj = "tasks.project:main"

[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]
log_cli = true
log_cli_level = "INFO"

[[tool.mypy.overrides]]
module = ["houndify", "requests", "urllib3.exceptions"]
ignore_missing_imports = true

[tool.mypy]
mypy_path = "src"
